# weather-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: dev-container.dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: lint.yaml  test.yaml
docker/: Dockerfile
src/project_name/: main.py  main_test.py
src/weather_bot/: __init__.py  logs.py  main.py  main_test.py
src/weather_bot/bot/: __init__.py
src/weather_bot/data/: __init__.py  meteoswiss.py  meteoswiss_test.py
src/weather_bot/telegram/: bot.py  env.py  message.py
